WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306713
[AutoFill Debugging] Client-specified node attributes are missing for nodes in same-origin subframes
https://bugs.webkit.org/show_bug.cgi?id=306713
Summary
[AutoFill Debugging] Client-specified node attributes are missing for nodes i...
Wenson Hsieh
Reported
2026-01-31 16:35:17 PST
rdar://169303458
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-01-31 16:51:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57645
EWS
Comment 2
2026-02-01 13:19:56 PST
Committed
306606@main
(40f6e72b78be): <
https://commits.webkit.org/306606@main
> Reviewed commits have been landed. Closing PR #57645 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug